# object-detection

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  streamlit_config.py
