[project]
name = "aods"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dicttoxml>=1.7.16",
    "plotly>=6.5.0",
    "pycocotools>=2.0.10",
    "streamlit>=1.51.0",
    "supervision>=0.27.0",
    "ultralytics>=8.3.233",
]
